2022-08-17  Martin Liska  <mliska@suse.cz>

	* debuginfod.cxx (handle_buildid): Update HTTP statistics only if
	it comes from HTTP request.

2022-08-17  Martin Liska  <mliska@suse.cz>

	* debuginfod.cxx: Print filename for "cannot open archive".

2022-08-15  Frank Ch. Eigler <fche@redhat.com>

	PR29474
	* debuginfod.cxx (handle_buildid_r_match): Don't trigger false-404's
	for concurrently prefetched target files.

2022-08-02  Josef Cejka <jcejka@suse.de>

	* debuginfod.cxx (groom): Don't evaluate regex unless needed.

2022-07-29  Josef Cejka <jcejka@suse.de>

	* debuginfod.cxx: Create db indexes for fast delete while grooming.

2022-06-03  Michael Trapp <michael.trapp@sap.com>

	* debuginfod.cxx (scan_source_info): New global.
	(parse_opt, elf_classify): Use it.

2022-05-09  Mark Wielaard  <mark@klomp.org>

	* debuginfod-client.c (debuginfod_clean_cache): Move utime call to
	before fts traversal.

2022-05-09  Mark Wielaard  <mark@klomp.org>

	* debuginfod-client.c (debuginfod_init_cache): Remove.
	(debuginfod_query_server): Don't call debuginfod_init_cache, call
	mkdir then debuginfod_clean_cache.

2022-05-09  Mark Wielaard  <mark@klomp.org>

	* debuginfod-client.c (debuginfod_config_cache): Always open with
	O_CREATE first, then use fstat, only write the cache_config_default_s
	value if st_size == 0, otherwise read value from file.

2022-05-09  Mark Wielaard  <mark@klomp.org>

	* debuginfod.cxx (conninfo): Always provide servname to getnameinfo.

2022-05-09  Mark Wielaard  <mark@klomp.org>

	* debuginfod-client.c (debuginfod_query_server): Add
	curl_easy_setopt_ck macro, use it for all curl_easy_setopt calls.

2022-05-09  Mark Wielaard  <mark@klomp.org>

	* debuginfod-client.c (debuginfod_write_callback): Check result
	of curl_easy_getinfo.

2022-05-05  Mark Wielaard  <mark@klomp.org>

	* debuginfod.cxx (main): Define use_epoll. Set to MHD_USE_EPOLL
	based on MHD_VERSION. Don't use MHD_USE_THREAD_PER_CONNECTION
	when use_poll is set.
